--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
             <div class="row">
                 <div class="col">
                     <div class="d-flex justify-content-center">
-                        <button onclick="inciarJogo()" class="btn btn-danger btn-lg">Iniciar Jogo</button>
+                        <button onclick="inciarJogo()" class="btn btn-danger btn-lg mb-2">Iniciar Jogo</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="d-flex justify-content-center">
+                        <a class="btn btn-dark" href="instrucoes.html">Instruções</a>
                     </div>
                 </div>
             </div>
